gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/extra-files/bar11453.d
version https://git-lfs.github.com/spec/v1
oid sha256:0d01a4aae7c9bcde9d7bf8c9c0f839520b3c604b4e02a26fbe76a6ff1d12761e
size 26
